fixed spacing in flex

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -93,7 +93,6 @@ header li {
   background: #020e13;
   border-radius: 25px;
   box-shadow: 4px 4px 10px #000000;
-  align-content: space-around;
 }
 
 .indexBlog img {
@@ -106,6 +105,8 @@ header li {
   display: flex;
   flex-flow: column wrap;
   width: 80%;
+  align-content: space-between;
+  justify-content: space-evenly;
 }
 
 .seven,
@@ -116,6 +117,11 @@ header li {
 .twelve {
   background: #0a0908;
   border-radius: 25px;
+}
+
+.bar {
+  width: 100%;
+  height: 30px;
 }
 
 .contact {
